Fix version 1.1 release date in CHANGES

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-Version 1.1, released 2009-10-XX
+Version 1.1, released 2009-10-20
 
 * API additions and improvements:
   - Extend array and object APIs
