--- a/CHANGES
+++ b/CHANGES
@@ -2,8 +2,8 @@ Version 2.0 (in development)
 ============================
 
 This release is backwards incompatible with the 1.x release series.
-See the documentation for instructions on how to port existing code to
-Jansson 2.0.
+See the chapter "Upgrading from older versions" in documentation for
+details.
 
 * Backwards incompatible changes:
 
@@ -14,7 +14,7 @@ Jansson 2.0.
     type available, i.e. long long if it's supported, otherwise long.
     Add a typedef json_int_t that defines the type.
 
-  - Change the maximum indentation depth to 32 spaces in encoder. This
+  - Change the maximum indentation depth to 31 spaces in encoder. This
     frees up bits from the flags parameter of encoding functions
     `json_dumpf()`, `json_dumps()` and `json_dump_file()`.
 
@@ -23,8 +23,8 @@ Jansson 2.0.
 
 * New features
 
-  - `json_pack()`, `json_pack_ex()`, `json_vpack_ex()`: Create complex
-    JSON values based on a format string.
+  - `json_pack()`, `json_pack_ex()`, `json_vpack_ex()`: Create JSON
+    values based on a format string.
 
   - `json_unpack()`, `json_unpack_ex()`, `json_vunpack_ex()`: Simple
     value extraction and validation functionality based on a format
@@ -33,12 +33,12 @@ Jansson 2.0.
   - Add column, position and source fields to the ``json_error_t``
     struct.
 
-  - Report the error context for UTF-8 decoding errors in the decoder.
+  - Enhance error reporting in the decoder.
 
-  - Add preprocessor constants that define the library version.
+  - ``JANSSON_VERSION`` et al.: Preprocessor constants that define the
+    library version.
 
-  - Add API for setting custom memory allocation functions:
-    `json_set_alloc_funcs()`.
+  - `json_set_alloc_funcs()`: Set custom memory allocation functions.
 
 * Fix many portability issues, especially on Windows.
 
