--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-Version 2.4 (in development)
-============================
+Version 2.4
+===========
 
-Released 2012-XX-XX
+Released 2012-09-23
 
 * New features:
 
